@startuml
skinparam classAttributeIconSize 0
skinparam linetype ortho

class FinTrack {
    - fm : FinanceManager
    + {static} main(String[] args)
    - run()
    - hasUnexpectedArguments(String input) : boolean
}

class FinanceManager {
    .. App Logic ..
}

class "Ui" <<static>> {
    .. Console I/O ..
    + {static} waitForInput() : String
    + {static} printError(String msg)
    + {static} printExpenseAdded(Expense e)
    + {static} printWelcome()
}

class "Parser" <<static>> {
    .. String Parsing ..
    + {static} returnFirstWord(String input) : String
    + {static} parseAddExpense(String input) : Expense
}

class Expense {
    .. Model ..
}

FinTrack o-- "1" FinanceManager
FinTrack ..> "Ui" : <<uses>>
FinTrack ..> "Parser" : <<uses>>
FinTrack ..> Expense : <<uses>>
@enduml